# dia-tts

./: .env  .gitignore  Dockerfile  api.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yaml
dia/: custom_layers.py  layers.py
docker/: Dockerfile.gpu  requirements.txt
