[project]
name = "nari-tts-dia-tts"
version = "0.1.0"
description = "Branch of Dia - A text-to-speech model for dialogue generation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Nari Labs", email = "contact@narilabs.ai"},
    {name = "Sean McDermid", email = "fish_boy42@hotmail.com"}
]
dependencies = [
    "descript-audio-codec>=1.0.0",
    "huggingface-hub>=0.30.2",
    "numpy>=2.2.4",
    "pydantic>=2.11.3",
    "safetensors>=0.5.3",
    "soundfile>=0.13.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "triton==3.2.0 ; sys_platform == 'linux'",
    "triton-windows==3.2.0.post18 ; sys_platform == 'win32'",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.0.0",
    "google-api-core >=1.34.0, <2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/fishboy42/dia-tts"
"Bug Tracker" = "https://github.com/fishboy42/dia-tts/issues"

[tool.hatch.build.targets.wheel]
packages = ["dia"]

[tool.ruff]
# Never enforce `E501` (line length violations).
lint.ignore = ["C901", "E501", "E741", "W605"]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[dependency-groups]
dev = [
    "ninja>=1.11.1.4",
    "packaging>=25.0",
    "PyJWT>=2.6.0",
]
